# nira-project

iso-onboarding-toolkit/: PROJECT_REPORT.md  README.md  pyproject.toml
iso-onboarding-toolkit/configs/: caiso.yaml
iso-onboarding-toolkit/data/: historical-ems-hourly-load-for-april-2024.xlsx  historical-ems-hourly-load-for-april-2025.xlsx  historical-ems-hourly-load-for-august-2024.xlsx  historical-ems-hourly-load-for-august-2025.xlsx  historical-ems-hourly-load-for-december-2024.xlsx  historical-ems-hourly-load-for-february-2025.xlsx  historical-ems-hourly-load-for-january-2025.xlsx  historical-ems-hourly-load-for-july-2024.xlsx  historical-ems-hourly-load-for-july-2025.xlsx  historical-ems-hourly-load-for-june-2024.xlsx  historical-ems-hourly-load-for-june-2025.xlsx  historical-ems-hourly-load-for-march-2025.xlsx  historical-ems-hourly-load-for-may-2024.xlsx  historical-ems-hourly-load-for-may-2025.xlsx  historical-ems-hourly-load-for-november-2024.xlsx  historical-ems-hourly-load-for-october-2024.xlsx  historical-ems-hourly-load-for-october-2025.xlsx  historical-ems-hourly-load-for-september-2024.xlsx  historical-ems-hourly-load-for-september-2025.xlsx  historicalemshourlyload-2019.xlsx  historicalemshourlyload-2020.xlsx  historicalemshourlyload-2021.xlsx  historicalemshourlyload-2022.xlsx  historicalemshourlyloadfor2023.xlsx  historicalemshourlyloadforfebruary2024.xlsx  historicalemshourlyloadforjanuary2024.xlsx  historicalemshourlyloadformarch2024.xlsx
iso-onboarding-toolkit/examples/: config_example.yaml  partner_health_report.md  sample_iso_load.csv
(+135 files in other folders)
